zhei xie mo xing ying yong dao gong si de ge zhong chan pin zhong bu guo ping guo si hu zhi shao hai you

--- a/client.htm
+++ b/client.htm
@@ -346,6 +346,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/news/article-186427.htm" title="制霸战场：《Clash Mettere Trucchi》进阶技巧与深度策略解析">制霸战场：《Clash Mettere Trucchi》进阶技巧与深度策略解析</a></li>
+                        <li class="py-2"><a href="/news/article-186523.htm" title="智能省电新方案：用Shadowrocket优化iOS设备续航的终极指南">智能省电新方案：用Shadowrocket优化iOS设备续航的终极指南</a></li>
                     </ul>
     </div>
 </div>
@@ -357,7 +358,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                     </ul>
     </div>
