--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/website/css/hiddifynextgithub/style.css">
     <link rel="stylesheet" href="/assets/website/css/G.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    
-<!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-5TNWW6ENBH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -183,6 +182,25 @@
                 <div class="col-md-9">
                     <h2>最近更新文章</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-12-09">
+                            <div class="col-md-3">
+                                <div class="video-content">
+                                    <a href="/news/article-186523.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20240808-2/f21d9671b660f572de040aa997cc14ed.webp" alt="智能省电新方案：用Shadowrocket优化iOS设备续航的终极指南" class="img-fluid">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-md-9">
+                                <div class="detail-content">
+                                    <div class="detail-item">
+                                        <a href="/news/article-186523.htm" class="xcblog-blog-url">
+                                            <h3 class="fs-3 mb-1 xcblog-blog-title">智能省电新方案：用Shadowrocket优化iOS设备续航的终极指南</h3>
+                                        </a>
+                                        <p>引言：当手机续航成为现代人的焦虑  在移动互联网时代，我们享受着智能手机带来的便利，却也承受着电池续航的"电量焦虑"。那些不断跳出的低电量警告，那些随身携带的充电宝，那些时刻寻找插座的身影——这已成为</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-12-08">
                             <div class="col-md-3">
                                 <div class="video-content">
@@ -212,6 +230,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/news/article-186427.htm" title="制霸战场：《Clash Mettere Trucchi》进阶技巧与深度策略解析">制霸战场：《Clash Mettere Trucchi》进阶技巧与深度策略解析</a></li>
+                        <li class="py-2"><a href="/news/article-186523.htm" title="智能省电新方案：用Shadowrocket优化iOS设备续航的终极指南">智能省电新方案：用Shadowrocket优化iOS设备续航的终极指南</a></li>
                     </ul>
     </div>
 </div>
@@ -223,7 +242,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                     </ul>
     </div>
