--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="zh-CN" lang="zh-CN">
 
 <head>
-        <link rel="canonical" href="http://cgp2-z.com/paid-subscribe/" />
+        <link rel="canonical" href="http://cgp2-e.com/paid-subscribe/" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +15,7 @@
 
     <meta name="author" content="Karing 免费节点订阅官网">
     <meta property="og:type" content="webpage" />
-    <meta property="og:url" content="http://cgp2-z.com/paid-subscribe/" />
+    <meta property="og:url" content="http://cgp2-e.com/paid-subscribe/" />
     <meta property="og:site_name" content="Karing 免费节点订阅官网" />
     <meta property="og:title" content="2025 年高速下载专用付费机场推荐 — 大文件传输无压力" />
     <meta property="og:image" content="/assets/website/img/hiddifynextgithub/favicon.ico" />
@@ -47,8 +47,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/website/css/hiddifynextgithub/style.css">
     <link rel="stylesheet" href="/assets/website/css/G.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    
-<!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-5TNWW6ENBH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -595,6 +594,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2"><a href="/news/article-186427.htm" title="制霸战场：《Clash Mettere Trucchi》进阶技巧与深度策略解析">制霸战场：《Clash Mettere Trucchi》进阶技巧与深度策略解析</a></li>
+                        <li class="py-2"><a href="/news/article-186523.htm" title="智能省电新方案：用Shadowrocket优化iOS设备续航的终极指南">智能省电新方案：用Shadowrocket优化iOS设备续航的终极指南</a></li>
                     </ul>
     </div>
 </div>
@@ -606,7 +606,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                     </ul>
     </div>
