--- a/privacy.htm
+++ b/privacy.htm
@@ -47,8 +47,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/website/css/hiddifynextgithub/style.css">
     <link rel="stylesheet" href="/assets/website/css/G.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    
-<!-- Google tag (gtag.js) -->
+    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-5TNWW6ENBH"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -233,6 +232,7 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-186523.htm" title="智能省电新方案：用Shadowrocket优化iOS设备续航的终极指南">智能省电新方案：用Shadowrocket优化iOS设备续航的终极指南</a></li>
                         <li class="py-2"><a href="/news/article-186427.htm" title="制霸战场：《Clash Mettere Trucchi》进阶技巧与深度策略解析">制霸战场：《Clash Mettere Trucchi》进阶技巧与深度策略解析</a></li>
                     </ul>
     </div>
@@ -245,7 +245,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">1</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">2</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                     </ul>
     </div>
