--- a/about-us.htm
+++ b/about-us.htm
@@ -194,16 +194,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-189742.htm" title="Clash 100球拍穿线终极指南：解锁你的最佳击球表现">Clash 100球拍穿线终极指南：解锁你的最佳击球表现</a></li>
-                        <li class="py-2"><a href="/news/article-186921.htm" title="科学上网利器：全方位指南教你如何挑选最适合的Clash代理">科学上网利器：全方位指南教你如何挑选最适合的Clash代理</a></li>
-                        <li class="py-2"><a href="/news/article-188529.htm" title="全面探索《超级库尔比冲突》：一个充满惊喜与挑战的奇幻世界">全面探索《超级库尔比冲突》：一个充满惊喜与挑战的奇幻世界</a></li>
-                        <li class="py-2"><a href="/news/article-190549.htm" title="启点科学上网深度评测：解锁全球网络自由的利器">启点科学上网深度评测：解锁全球网络自由的利器</a></li>
-                        <li class="py-2"><a href="/news/article-188934.htm" title="全面掌握远程访问：用 Shadowrocket 安全连接 NAS 的终极指南">全面掌握远程访问：用 Shadowrocket 安全连接 NAS 的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-193800.htm" title="手机科学上网全攻略：解锁数字世界的自由之门">手机科学上网全攻略：解锁数字世界的自由之门</a></li>
                         <li class="py-2"><a href="/news/article-187322.htm" title="完整指南：Clash最佳参数设置与优化技巧">完整指南：Clash最佳参数设置与优化技巧</a></li>
+                        <li class="py-2"><a href="/news/article-194611.htm" title="如何完全删除Shadowrocket：详细步骤与常见问题解答">如何完全删除Shadowrocket：详细步骤与常见问题解答</a></li>
+                        <li class="py-2"><a href="/news/article-192982.htm" title="全面掌握Clash V1白金：从原理到实战的高级代理指南">全面掌握Clash V1白金：从原理到实战的高级代理指南</a></li>
+                        <li class="py-2"><a href="/news/article-188529.htm" title="全面探索《超级库尔比冲突》：一个充满惊喜与挑战的奇幻世界">全面探索《超级库尔比冲突》：一个充满惊喜与挑战的奇幻世界</a></li>
+                        <li class="py-2"><a href="/news/article-186523.htm" title="智能省电新方案：用Shadowrocket优化iOS设备续航的终极指南">智能省电新方案：用Shadowrocket优化iOS设备续航的终极指南</a></li>
                         <li class="py-2"><a href="/news/article-191363.htm" title="Lede系统安装V2Ray离线安装包详细指南">Lede系统安装V2Ray离线安装包详细指南</a></li>
-                        <li class="py-2"><a href="/news/article-191769.htm" title="深入探索Clash补丁：从安装配置到高阶应用的全方位指南">深入探索Clash补丁：从安装配置到高阶应用的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-190146.htm" title="突破网络边界：Clash免费节点完全指南与深度体验报告">突破网络边界：Clash免费节点完全指南与深度体验报告</a></li>
-                        <li class="py-2"><a href="/news/article-189336.htm" title="终极指南：一键搭建 V2Ray 并使用搬瓦工 VPS 提升网络自由度">终极指南：一键搭建 V2Ray 并使用搬瓦工 VPS 提升网络自由度</a></li>
+                        <li class="py-2"><a href="/news/article-195424.htm" title="突破网络枷锁：全面解析v2ray免费账号获取与高效使用指南">突破网络枷锁：全面解析v2ray免费账号获取与高效使用指南</a></li>
+                        <li class="py-2"><a href="/news/article-195017.htm" title="科学上网新选择：如何挑选与配置支持Vmess协议的路由器">科学上网新选择：如何挑选与配置支持Vmess协议的路由器</a></li>
+                        <li class="py-2"><a href="/news/article-196238.htm" title="完全指南：如何选择最优Shadowrocket节点提升上网体验">完全指南：如何选择最优Shadowrocket节点提升上网体验</a></li>
                     </ul>
     </div>
 </div>
@@ -215,7 +215,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                     </ul>
     </div>
