--- a/client.htm
+++ b/client.htm
@@ -345,16 +345,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-188529.htm" title="全面探索《超级库尔比冲突》：一个充满惊喜与挑战的奇幻世界">全面探索《超级库尔比冲突》：一个充满惊喜与挑战的奇幻世界</a></li>
-                        <li class="py-2"><a href="/news/article-192172.htm" title="掌握网络自由之钥：Clash节点探索者的全方位实战指南">掌握网络自由之钥：Clash节点探索者的全方位实战指南</a></li>
+                        <li class="py-2"><a href="/news/article-190549.htm" title="启点科学上网深度评测：解锁全球网络自由的利器">启点科学上网深度评测：解锁全球网络自由的利器</a></li>
                         <li class="py-2"><a href="/news/article-191769.htm" title="深入探索Clash补丁：从安装配置到高阶应用的全方位指南">深入探索Clash补丁：从安装配置到高阶应用的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-187724.htm" title="突破网络藩篱：2024年最经济高效的科学上网全攻略">突破网络藩篱：2024年最经济高效的科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-191363.htm" title="Lede系统安装V2Ray离线安装包详细指南">Lede系统安装V2Ray离线安装包详细指南</a></li>
-                        <li class="py-2"><a href="/news/article-186523.htm" title="智能省电新方案：用Shadowrocket优化iOS设备续航的终极指南">智能省电新方案：用Shadowrocket优化iOS设备续航的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-187322.htm" title="完整指南：Clash最佳参数设置与优化技巧">完整指南：Clash最佳参数设置与优化技巧</a></li>
+                        <li class="py-2"><a href="/news/article-188529.htm" title="全面探索《超级库尔比冲突》：一个充满惊喜与挑战的奇幻世界">全面探索《超级库尔比冲突》：一个充满惊喜与挑战的奇幻世界</a></li>
                         <li class="py-2"><a href="/news/article-190146.htm" title="突破网络边界：Clash免费节点完全指南与深度体验报告">突破网络边界：Clash免费节点完全指南与深度体验报告</a></li>
+                        <li class="py-2"><a href="/news/article-187724.htm" title="突破网络藩篱：2024年最经济高效的科学上网全攻略">突破网络藩篱：2024年最经济高效的科学上网全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-194611.htm" title="如何完全删除Shadowrocket：详细步骤与常见问题解答">如何完全删除Shadowrocket：详细步骤与常见问题解答</a></li>
+                        <li class="py-2"><a href="/news/article-195017.htm" title="科学上网新选择：如何挑选与配置支持Vmess协议的路由器">科学上网新选择：如何挑选与配置支持Vmess协议的路由器</a></li>
+                        <li class="py-2"><a href="/news/article-194207.htm" title="Clash设置HTTP代理：从入门到精通的完整指南">Clash设置HTTP代理：从入门到精通的完整指南</a></li>
                         <li class="py-2"><a href="/news/article-186427.htm" title="制霸战场：《Clash Mettere Trucchi》进阶技巧与深度策略解析">制霸战场：《Clash Mettere Trucchi》进阶技巧与深度策略解析</a></li>
-                        <li class="py-2"><a href="/news/article-188934.htm" title="全面掌握远程访问：用 Shadowrocket 安全连接 NAS 的终极指南">全面掌握远程访问：用 Shadowrocket 安全连接 NAS 的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-196238.htm" title="完全指南：如何选择最优Shadowrocket节点提升上网体验">完全指南：如何选择最优Shadowrocket节点提升上网体验</a></li>
                     </ul>
     </div>
 </div>
@@ -366,7 +366,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
+                <h4><span class="badge" style="float: right;">6</span> <a href="/date/2026-01/" title="2026-01 归档">2026-01</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-12/" title="2025-12 归档">2025-12</a></h4>
             </li>
                     </ul>
     </div>
